ingress/case-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: case-ingress
  namespace: belgium
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-site"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - test.infectieradar.be
    secretName: echo-tls
  rules:
    - host: test.infectieradar.be
      http:
        paths:
          - path: /api(/|$)(.*)
            backend:
              serviceName: participant-api-service
              servicePort: 3231
          - path: /admin(/|$)(.*)
            backend:
              serviceName: management-api-service
              servicePort: 3232
